--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "type-check:watch": "npm run type-check -- --watch",
     "test": "jest -c ./config/test/jest.js --verbose",
     "test:watch": "npm run test -- --watchAll -i",
+    "test:e2e": "npm start -- start:e2e",
+    "start:e2e": "cypress open",
     "clean": "rimraf dist"
   },
   "repository": {
@@ -57,11 +59,13 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/react-hooks": "^7.0.1",
+    "@testing-library/cypress": "^8.0.1",
     "@types/jest": "^26.0.24",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
     "babel-loader": "^8.2.2",
+    "cypress": "^9.5.1",
     "dotenv-webpack": "^7.0.3",
     "html-webpack-plugin": "^5.3.2",
     "jest": "^27.0.6",
